--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link id="favico" rel="icon" type="image/png" href="https://bizweb.dktcdn.net/100/327/577/files/2.png"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <title>MH Shop</title>
+    <title>MH-Shop</title>
     <link href="assets/fonts/fontawesome-free-5.15.3/css/all.min.css" rel="stylesheet">
 </head>
 <body>    
